--- a/pprls model tests/.classpath
+++ b/pprls model tests/.classpath
@@ -4,7 +4,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/pprls"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/pprls model"/>
 	<classpathentry kind="lib" path="/pprls/target/classes"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/pprls_model"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
