--- a/pprls model tests/.project
+++ b/pprls model tests/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>pprls model tests</name>
+	<name>pprls_model_tests</name>
 	<comment></comment>
 	<projects>
 	</projects>
