--- a/pprls/pom.xml
+++ b/pprls/pom.xml
@@ -47,14 +47,17 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.shiro</groupId>
+			<artifactId>shiro-spring</artifactId>
+			<version>1.4.0-RC2</version>
+		</dependency>
+		<dependency>
 			<groupId>com.fasterxml.uuid</groupId>
 			<artifactId>java-uuid-generator</artifactId>
-			<version>3.1.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.pprls</groupId>
 			<artifactId>pprls_core</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 	<build>
@@ -65,4 +68,18 @@
 			</plugin>
 		</plugins>
 	</build>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.pprls</groupId>
+				<artifactId>pprls_core</artifactId>
+				<version>0.0.1-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>com.fasterxml.uuid</groupId>
+				<artifactId>java-uuid-generator</artifactId>
+				<version>3.1.3</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 </project>
