--- a/pprls/src/main/resources/application.properties
+++ b/pprls/src/main/resources/application.properties
@@ -5,5 +5,6 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=FALSE
 
-spring.data.elasticsearch.cluster-nodes=localhost:9300
+spring.data.elasticsearch.cluster-nodes=192.168.99.100:9300
+#spring.data.elasticsearch.cluster-name=
 spring.data.elasticsearch.repositories.enabled=true
