--- a/pprls_registry/pom.xml
+++ b/pprls_registry/pom.xml
@@ -8,8 +8,8 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 
-	<name>pprls</name>
-	<description>PPRLS Document Managment System</description>
+	<name>pprls_registry</name>
+	<description>PPRLS Registry</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
